[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/scenes/Choosing.gd" type="Script" id=1]
[ext_resource path="res://scenes/Photo.tscn" type="PackedScene" id=3]

[node name="Choosing" type="Node2D"]
script = ExtResource( 1 )

[node name="Backgound" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 768.0
color = Color( 0.462745, 0.458824, 0.458824, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 768.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 14.0
text = "Choose an image"
align = 1

[node name="ImageContainter" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 18.0

[node name="ImageA" parent="." instance=ExtResource( 3 )]
margin_left = 136.0
margin_top = 177.0
margin_right = 136.0
margin_bottom = 177.0
rect_rotation = -6.7

[node name="ImageB" parent="." instance=ExtResource( 3 )]
margin_left = 552.0
margin_top = 188.0
margin_right = 552.0
margin_bottom = 188.0
rect_rotation = 6.6

[connection signal="gui_input" from="ImageA" to="." method="_on_ImageA_gui_input"]
[connection signal="gui_input" from="ImageB" to="." method="_on_ImageB_gui_input"]
